<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">拉勾招聘</string>
    <string name="apply_for">投递简历</string>
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    <string name="update_at">更新于</string>
    <string name="image_content">Image</string>
    <string name="position_detail">职位详情</string>
    <string name="send_resume">投个简历</string>

    <!-- MyResumeFragment -->
    <string name="self">个人中心</string>
    <string name="resume">我的简历</string>
    <string name="my_deliver">我的投递反馈</string>
    <string name="set_deliver">投递设置</string>
    <string name="change_user">退出当前账户</string>
    <string name="basic_info">基本信息</string>
    <string name="expect_job">期望工作</string>
    <string name="job_experience">工作经历</string>
    <string name="project_experience">项目经验</string>
    <string name="education_experience">教育背景</string>
    <string name="self_description">自我描述</string>
    <string name="project_show">作品展示</string>
    <string name="umeng_fb">反馈建议</string>

    <!-- JobFragment -->
    <string name="search_hint">输入关键字精确查找</string>
    <string name="search_beijing">北京</string>
    <string name="search_country">全国</string>
    <string name="search_shanghai">上海</string>
    <string name="search_hangzhou">杭州</string>
    <string name="search_shenzhen">深圳</string>
    <string name="search_guangzhou">广州</string>
    <string name="title_home">拉勾网</string>
    <string name="search_position">职位搜索</string>
    <string name="fb_null">当前没有投递反馈</string>

    <!-- LoginFragment -->
    <string name="string_login_email">请输入登录邮箱地址</string>
    <string name="string_login_psw">请输入密码</string>
    <string name="string_login_btn">登      录</string>
    <string name="string_login">登录</string>
    <string name="string_login_tips">登录帐号为拉勾网注册帐号</string>

    <!-- MyDialog -->
    <string name="string_mydialog_sure">确定</string>
    <string name="string_mydialog_cancle">取消</string>
    <string name="string_check_text">记住我的选择</string>

    <!-- JobDetailFragment -->
    <string name="string_share_job">分享</string>
    <string name="string_detail_null">您来晚了，该职位招聘已结束啦~</string>
    <string name="string_about_us_btn">关于</string>

    <!-- SplashActivity -->
    <string name="string_copyright">\@奋斗的蚂蚁01</string>
    <string name="string_lagou">拉 勾 网</string>
    <string name="string_lagou_del">专注互联网职业机会</string>
    <!-- AboutUsFragment -->
    <string name="string_about_back">关于我们</string>
    <string name="string_version">Ver 2.2.4</string>
    <string name="string_weixin">l1204783269</string>
    <string name="string_sina">203mayi@gmail.com</string>
    <string name="string_deliver">投递反馈</string>
    <string name="umeng_fb_powered_by">umeng_fb_powered_by</string>
    <string name="girl_txt">拉勾正在挤沟沟，等几分钟再来看吧！</string>

    <!-- SettingFragment -->
    <string name="app_setting">设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_app">关于软件</string>

    <string-array name="job_list">
        <item>所有职位</item>
        <item>Java</item>
        <item>PHP</item>
        <item>Android</item>
        <item>ios</item>
        <item>产品经理</item>
        <item>运营</item>
        <item>前端</item>
        <item>BD</item>
        <item>UI</item>
        <item>实习</item>
    </string-array>

    <string-array name="city_list">
        <item>广州</item>
        <item>深圳</item>
        <item>杭州</item>
        <item>上海</item>
        <item>北京</item>
        <item>全国</item>
    </string-array>
</resources>