<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topbar"
        style="@style/topBar" >

        <TextView
            android:id="@+id/back_job"
            style="@style/back_text"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/right_bar_job"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/overflow_icon"
            android:background="@drawable/selector_detail_deliver_btn"
            android:contentDescription="@string/app_name"
            android:paddingLeft="25dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="15dp"/>
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/lay_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbar"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/lay_search"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="8dp" >
        </LinearLayout>
    </HorizontalScrollView>

    <mayi.lagou.com.widget.pulltorefresh.PullToRefreshListView
        android:id="@+id/job_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lay_sc"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp" />

    <View
        android:id="@+id/grayview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00d8d8d8"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp" >

        <Button
            android:id="@+id/menu"
            style="@style/MenuStyle"
            android:text="@string/search_country" />

        <Button
            android:id="@+id/item1"
            style="@style/MenuItemStyle"
            android:text="@string/search_beijing"
            android:visibility="gone" />

        <Button
            android:id="@+id/item2"
            style="@style/MenuItemStyle"
            android:text="@string/search_shanghai"
            android:visibility="gone" />

        <Button
            android:id="@+id/item3"
            style="@style/MenuItemStyle"
            android:text="@string/search_hangzhou"
            android:visibility="gone" />

        <Button
            android:id="@+id/item4"
            style="@style/MenuItemStyle"
            android:text="@string/search_shenzhen"
            android:visibility="gone" />

        <Button
            android:id="@+id/item5"
            style="@style/MenuItemStyle"
            android:text="@string/search_guangzhou"
            android:visibility="gone" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/girl_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/girl" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/girl"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/girl_txt"
            android:textColor="@color/darkgreen" />
    </RelativeLayout>

</RelativeLayout>