<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/lay_top"
        style="@style/topBar" >

        <TextView
            android:id="@+id/back"
            style="@style/back_text"
            android:text="@string/position_detail" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_top"
        android:layout_marginBottom="45dp"
        android:scrollbars="none"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/darkgreen"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/require"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dimgrey" />

                <TextView
                    android:id="@+id/release_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dimgrey" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:padding="6dp" >

                <ImageView
                    android:id="@+id/com_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/com_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginBottom="3dp"
                    android:layout_toRightOf="@id/com_img"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/com_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/com_name"
                    android:layout_marginLeft="4dp"
                    android:layout_toRightOf="@id/com_img"
                    android:textColor="@color/dimgrey" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    style="@style/Info_Title"
                    android:text="@string/position_detail" />

                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/dimgrey" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/lay_deliver"
        style="@style/topBar"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/bottom_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/send_resume"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/email"
        android:visibility="gone" />

</RelativeLayout>